--- a/public/assets/backend/css/style.css
+++ b/public/assets/backend/css/style.css
@@ -46,3 +46,46 @@
 .owl-carousel .owl-item img{
     width: 100px !important;
 }
+
+/* Loading */
+#facebookG{
+    background-color: rgb(247, 244, 244) !important;
+    height: 100vh !important;
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+.facebook_blockG{
+	background-color:#3985f7;
+	border:1px solid #fcfbfb;
+	height:46px;
+	width:15px;
+	opacity:0.1;
+	animation-name:bounceG;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	transform:scale(0.7);
+}
+div#facebookG > .facebook_blockG:nth-child(even) {
+	margin: 0 3px;
+}
+#blockG_1{
+	animation-delay:0.18s;
+}
+#blockG_2{
+	animation-delay:0.24s;
+}
+#blockG_3{
+	animation-delay:0.3s;
+}
+@keyframes bounceG{
+	0%{
+		transform:scale(1.2);
+		opacity:1
+	}
+	100%{
+		transform:scale(0.7);
+		opacity:0.1
+	}
+}
